Clean refactoring: now only initImportJob creates id-folders